--- a/mattscode.tex
+++ b/mattscode.tex
@@ -1,6 +1,18 @@
 \documentclass[a4paper,10pt]{book}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage{geometry}
+
+% Set equal margins on all sides
+\geometry{
+    left=2cm,
+    right=2cm,
+    top=2cm,
+    bottom=2cm,
+    marginparwidth=1.5cm,
+    marginparsep=0.05cm
+}
+
 \usepackage{minted}
 \usemintedstyle{pastie}
 \usepackage{xcolor} % to access the named colour LightGray
